BlueJ/ArrayMethods/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/khalidsaid/Desktop/ArrayMethods
-d
/Users/khalidsaid/Desktop/ArrayMethods/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/khalidsaid/Downloads/BlueJ 4.0.0/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/khalidsaid/Desktop/ArrayMethods/ArrayMethods.java
<---- end of javadoc command ---->
Loading source file /Users/khalidsaid/Desktop/ArrayMethods/ArrayMethods.java...
/Users/khalidsaid/Desktop/ArrayMethods/ArrayMethods.java:1: error: <identifier> expected
import.java.util.*;
      ^
1 error
